--- a/Self-Learning/back_to_python/.vscode/settings.json
+++ b/Self-Learning/back_to_python/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\sixgg\\Documents\\GitHub\\Python\\Django\\Dev\\Ecommerce\\venv\\scripts\\python.exe"
+    "python.pythonPath": "C:\\Program Files (x86)\\Microsoft Visual Studio\\Shared\\Python36_64\\python.exe"
 }
